--- a/finish_project/pom.xml
+++ b/finish_project/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>thymeleaf-layout-dialect</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+        </dependency>
+
 
 
     </dependencies>
